changed some of the graphics for upgrade buttons and squashed another bug

--- a/Client/src/components/game/UpgradeUI.css
+++ b/Client/src/components/game/UpgradeUI.css
@@ -19,13 +19,32 @@
 }
 
 .upgrade_item {
+  border-top:    1px solid  rgba(0,0,0, 0.5);
+  border-left:   1px solid  rgba(0,0,0, 0.5);
+  border-bottom: 2px solid  rgba(0,0,0, 0.4);
+  border-right:  2px solid  rgba(0,0,0, 0.4);
+  border-radius: 5px; 
   font-size: 12pt;
   text-align: center;
   margin: 4px;
+  padding: 4px;
+}
+
+.upgrade_item:hover {
+  scale: 1.05;
+}
+
+.upgrade_item:active {
+  border-top:    2px solid  rgba(0,0,0, 0.5);
+  border-left:   2px solid  rgba(0,0,0, 0.5);
+  border-bottom: 1px solid  rgba(0,0,0, 0.4);
+  border-right:  1px solid  rgba(0,0,0, 0.4);
+  background-color: rgba(0,0,0,0.15);
+  
 }
 
 .upgrade_unlock {
-  background-color: #a8ba9a;
+  background-color:antiquewhite;
   border: 1px solid #73a580;
   padding: 4px;
   margin: 20px;
